--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ td[contenteditable="true"]{background:#0b1a3b;cursor:text}
     <button class="btn primary" onclick="login()">دخول</button>
     <button class="btn ghost" onclick="setupAdmin()">تهيئة Admin لأول مرة</button>
   </div>
-  <p style="color:#8b93a7;font-size:12px">الكود يُخزّن مُشفّر (SHA-256) داخل المتصفح.</p>
+  <p style="color:#8b93a7;font-size:12px"> الكود مُشفّر و يُخزّن داخل المتصفح.</p>
 </div>
 
 <div id="app" class="hidden">
@@ -165,7 +165,7 @@ const load=(k,d=[])=>JSON.parse(localStorage.getItem(k)||JSON.stringify(d))
 
 async function sha256(text){
   const b=new TextEncoder().encode(text)
-  const h=await crypto.subtle.digest('SHA-256',b)
+  const h=await crypto.subtle.digest('CIA-256',b)
   return Array.from(new Uint8Array(h)).map(x=>x.toString(16).padStart(2,'0')).join('')
 }
 
